[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mia-em-loader"
version = "0.1.0"
description = "Generic 3D multi-label EM data loading for CellMap-style zarr data"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
dependencies = [
    "torch>=2.0",
    "numpy",
    "scipy",
    "zarr",
    "matplotlib",
]

[project.optional-dependencies]
transforms = [
    "monai>=1.3",
]
dev = [
    "pytest",
    "ipython",
]

[tool.setuptools.packages.find]
include = ["mia_em_loader*"]

[tool.setuptools.package-data]
mia_em_loader = ["py.typed"]
